# color-mixer-ws

./: Cargo.toml
color-mixer/: Cargo.toml
color-mixer/.cargo/: config.toml
color-mixer/src/: lib.rs  strip.rs
mixer-dioxus/: .gitignore  Cargo.toml  Dioxus.toml  Trunk.toml
mixer-dioxus/public/: style.css
mixer-dioxus/src/: main.rs
pack/: Cargo.toml
pack/src/: main.rs
util/: commands.txt  web_server.py
